--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,8 +19,7 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Execute tests
-        run: |
-          python -m unittest tests/test_*.py
+        run: python -m unittest tests/test_*.py
 
 
 
