--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: pull changes
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Get python 3.9
         uses: actions/setup-python@v2
         with:
